Fix login page from hiding on mobile

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -206,7 +206,7 @@ h4 {
 }
 
 .login {
-  padding-top: 100px;
+  padding-top: 300px;
 }
 
 .emailbox {
